[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.23.1"
reqwest = { version = "0.12.18", features = ["json", "blocking", "brotli", "gzip", "http2", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
textwrap = "0.16.2"
colored = "2.0"
urlencoding = "2.1.3"
itertools = "0.14.0"

